# esp32-brother-ptouch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  idf_component.yml  library.json
.github/workflows/: ci.yml  host-tests.yml  publish.yml
docs/: API.md  MIGRATING_FROM_0_1.md  MODEL_SUPPORT.md  PROVENANCE.md
examples/pio_arduino/: platformio.ini
examples/pio_arduino/src/: main.cpp
examples/print_demo/: CMakeLists.txt  sdkconfig.defaults
examples/print_demo/main/: CMakeLists.txt  idf_component.yml  print_demo_main.c
host/: RESULTS.md  build.sh  gen_oracle.py  oracle_generated.h  test_completion.c  test_models.c  test_ptouch.c  test_usb_source_contract.py
include/: ptouch_completion.h  ptouch_model.h  ptouch_print.h  ptouch_raster.h  ptouch_usb.h  ptouch_usb_descriptor.h
src/: ptouch_completion.c  ptouch_model.c  ptouch_print.c  ptouch_raster.c  ptouch_usb.c  ptouch_usb_descriptor.c
